--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "description": "An app used to find all movie trailers for your local theater's \"now playing\" movies.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "create-db": "node create-db.js",
+    "sass": "node-sass client/sass/ -o client/css/",
+    "lint": "eslint --color **/*.js --ignore-pattern node_modules/",
+    "dev": "concurrently \"nodemon server.js\" \"rerun-script\""
+  },
+  "watches": {
+    "sass": [
+      "client/sass/*.scss"
+    ],
+    "lint": "**/*.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +25,23 @@
   "bugs": {
     "url": "https://github.com/sarahmorris926/movie-trailers/issues"
   },
-  "homepage": "https://github.com/sarahmorris926/movie-trailers#readme"
+  "homepage": "https://github.com/sarahmorris926/movie-trailers#readme",
+  "dependencies": {
+    "angular": "^1.6.10",
+    "angular-route": "^1.6.10",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.18.2",
+    "concurrently": "^3.5.1",
+    "dotenv": "^5.0.1",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "imdb-api": "^3.1.2",
+    "node-sass": "^4.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
+    "rerun-script": "^0.6.0",
+    "sequelize": "^4.37.6"
+  }
 }
